remove darkmode tailwind

--- a/src/views/partials/shareFolderModal.ejs
+++ b/src/views/partials/shareFolderModal.ejs
@@ -21,8 +21,8 @@
                     <!-- share request form  -->
                     <form id="share-folder-form" method="post" action="/request-share/<%= folderId %>">
                         <div class="mb-5">
-                            <label for="share-time" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Select Timeframe</label>
-                            <select id="share-time" name="time" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                            <label for="share-time" class="block mb-2 text-sm font-medium text-white">Select Timeframe</label>
+                            <select id="share-time" name="time" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white">
                                 <option value="HOUR">1 Hour</option>
                                 <option value="DAY">1 Day</option>
                                 <option value="WEEK">1 Week</option>
@@ -31,8 +31,8 @@
                         </div>
                         <div class="mb-5">
                             <div class="flex items-center mb-4">
-                                <input id="cascade" name="cascade" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm dark:bg-gray-700 dark:border-gray-600">
-                                <label for="cascade" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Include Subfolders</label>
+                                <input id="cascade" name="cascade" type="checkbox" class="w-4 h-4 text-blue-600 rounded-sm bg-gray-700 border-gray-600">
+                                <label for="cascade" class="ms-2 text-sm font-medium text-gray-300">Include Subfolders</label>
                             </div>
                         </div>
                     </form>
@@ -40,14 +40,14 @@
                     <!-- share-link section -->
                     <div id="share-link" class="w-full max-w-sm">
                         <div class="mb-2 flex justify-between items-center">
-                            <label for="website-url" class="text-sm font-medium text-gray-900 dark:text-white">Copy link to Share:</label>
+                            <label for="website-url" class="text-sm font-medium text-white">Copy link to Share:</label>
                         </div>
                         <div class="flex items-center">
-                            <span class="shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-s-lg dark:bg-gray-600 dark:text-white dark:border-gray-600">URL</span>
+                            <span class="shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center border rounded-s-lg bg-gray-600 text-white border-gray-600">URL</span>
                             <div class="relative w-full">
-                                <input id="website-url" type="text" class="bg-gray-50 border border-e-0 border-gray-300 text-white  text-sm border-s-0 focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" value="<%= shareLink %>" readonly />
+                                <input id="website-url" type="text" class="border border-e-0 text-white text-sm border-s-0 block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400" value="<%= shareLink %>" readonly />
                             </div>
-                            <button onclick="navigator.clipboard.writeText('<%= shareLink %>')" class="shrink-0 z-10 inline-flex items-center py-3 px-4 text-sm font-medium text-center text-white bg-blue-700 rounded-e-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 border border-blue-700 dark:border-blue-600 hover:border-blue-800 dark:hover:border-blue-700" type="button">
+                            <button onclick="navigator.clipboard.writeText('<%= shareLink %>')" class="shrink-0 z-10 inline-flex items-center py-3 px-4 text-sm font-medium text-center text-white rounded-e-lg focus:ring-4 focus:outline-none bg-blue-600 hover:bg-blue-700 focus:ring-blue-800 border border-blue-600  hover:border-blue-700" type="button">
                                 <span id="default-icon">
                                     <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
                                         <path d="M16 1h-3.278A1.992 1.992 0 0 0 11 0H7a1.993 1.993 0 0 0-1.722 1H2a2 2 0 0 0-2 2v15a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2Zm-3 14H5a1 1 0 0 1 0-2h8a1 1 0 0 1 0 2Zm0-4H5a1 1 0 0 1 0-2h8a1 1 0 1 1 0 2Zm0-5H5a1 1 0 0 1 0-2h2V2h4v2h2a1 1 0 1 1 0 2Z"/>
