--- a/src/views/partials/shareFolderModal.ejs
+++ b/src/views/partials/shareFolderModal.ejs
@@ -63,8 +63,10 @@
                 <button data-modal-hide="share-modal" type="button" class="py-2.5 px-5 text-sm font-medium rounded-lg border bg-gray-800 text-gray-300 border-gray-600 hover:text-white hover:bg-gray-700">Cancel</button>
                 <% if (shareLink == "") { %>
                     <button id="submit-files" type="submit" form="share-folder-form" data-modal-hide="share-modal" class="disabled ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-35 bg-blue-600 enabled:hover:bg-blue-700">Get link</button>
-                    <% } else { %>
-                    <button disabled id="submit-files" type="submit" form="share-folder-form" data-modal-hide="share-modal" class="disabled ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-35 bg-blue-600 enabled:hover:bg-blue-700">Get link</button>
+                <% } else { %>
+                    <form action="/cancel-shared/<%= folderId %>" method="post">
+                        <button type="submit" data-modal-hide="share-modal" class="ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-35 bg-red-600 hover:bg-red-700">Stop Sharing</button>
+                    </form>
                 <% } %>
 
             </div>
