--- a/src/views/partials/shared/tableShared.ejs
+++ b/src/views/partials/shared/tableShared.ejs
@@ -13,7 +13,7 @@
                     <div class="border-b border-gray-700 hover:bg-gray-800 flex items-center text-gray-400" id="<%= item.id %>">
                         <% if (item.type == "folder") { %>
                             <div class="flex-grow">
-                                <a href="/my-drive/<%= item.id ? item.id : null %>" class="flex items-center gap-4 px-6 py-4 font-medium whitespace-nowrap text-white">
+                                <a href="/shared-drive/<%= item.id ? item.id : null %>?key=<%= item.shareId.key %>" class="flex items-center gap-4 px-6 py-4 font-medium whitespace-nowrap text-white">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
                                         <path d="M19.5 21a3 3 0 0 0 3-3v-4.5a3 3 0 0 0-3-3h-15a3 3 0 0 0-3 3V18a3 3 0 0 0 3 3h15ZM1.5 10.146V6a3 3 0 0 1 3-3h5.379a2.25 2.25 0 0 1 1.59.659l2.122 2.121c.14.141.331.22.53.22H19.5a3 3 0 0 1 3 3v1.146A4.483 4.483 0 0 0 19.5 9h-15a4.483 4.483 0 0 0-3 1.146Z" />
                                     </svg>
@@ -29,11 +29,10 @@
                                     <%= item.name %>
                                 </div>
                             </div>
-                        <% } %>
-                        <div class="px-5 py-4"><%= item.size ? item.size : null %></div>
-                        <div class="px-6 py-4 min-w-32 flex justify-center">
-                            <form action="/download-shared/<%= folderId %>/<%= item.id %>" method="get">
-                                <button
+                            <div class="px-5 py-4"><%= item.size ? item.size : null %></div>
+                            <div class="px-6 py-4 min-w-32 flex justify-center">
+                                <form action="/download-shared/<%= folderId %>/<%= item.id %>" method="get">
+                                    <button
                                     type="submit" 
                                     onclick="setToast('Download Started!')"
                                     class="text-white text-center inline-flex items-center">
@@ -44,6 +43,7 @@
                                 <input hidden name="key" type="text" value="<%= key %>">
                             </form>
                         </div>
+                        <% } %>
                     </div>
                 <% } %>
             </div>
@@ -60,7 +60,7 @@
                         <li class="hover:bg-gray-800" id="<%= item.id %>">
                             <div class="flex items-center p-4 justify-between">
                                 <% if (item.type == "folder") { %>
-                                    <a href="/my-drive/<%= item.id ? item.id : null %>" class="flex items-center gap-3 text-white">
+                                    <a href="/shared-drive/<%= item.id ? item.id : null %>?key=<%= item.shareId.key %>" class="flex items-center gap-3 text-white">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
                                             <path d="M19.5 21a3 3 0 0 0 3-3v-4.5a3 3 0 0 0-3-3h-15a3 3 0 0 0-3 3V18a3 3 0 0 0 3 3h15ZM1.5 10.146V6a3 3 0 0 1 3-3h5.379a2.25 2.25 0 0 1 1.59.659l2.122 2.121c.14.141.331.22.53.22H19.5a3 3 0 0 1 3 3v1.146A4.483 4.483 0 0 0 19.5 9h-15a4.483 4.483 0 0 0-3 1.146Z" />
                                         </svg>
