add navigation to shared drive

--- a/src/views/partials/shared/mainShared.ejs
+++ b/src/views/partials/shared/mainShared.ejs
@@ -3,7 +3,7 @@
         <div class="flex flex-col h-full">
             <div class="sticky top-0 bg-gray-900 z-0">
                 <div class="flex relative items-end justify-between py-4">
-                    
+                    <%- include("./navBack.ejs")%>
                 </div>
             </div>
 
